# recommendation-system-pokec

./: .gitignore  CMakeLists.txt  README.md  config.yaml  download_pokec.sh
config/: text_columns.txt
include/: bin_reader.h  clubs_extractor.h  column_stats.h  data_explorer.h  encoder.h  eval.h  evaluator.h  feature_extractor.h  graph_builder.h  hiercoarsener.h  incremental_builder.h  lemmatizer_wrapper.h  preprocess.h  recommendation_tests.h  recommender.h  recommender_clubs.h  recommender_graph.h  recommender_similarity.h  serializer.h  test.h  tfidf_index.h  tokenizer.h  ui.h  user_loader.h  user_profile.h  utils.h  vocab_builder.h
python/: app.py  plot_friends_holdout.py  requirements.txt
python/templates/: index.html
src/: api_cli.cpp  bin_reader.cpp  clubs_extractor.cpp  column_stats.cpp  data_explorer.cpp  encoder.cpp  eval.cpp  evaluator.cpp  feature_extractor.cpp  graph_builder.cpp  hiercoarsener.cpp  incremental_builder.cpp  lemmatizer_wrapper.cpp  main.cpp  preprocess.cpp  recommendation_tests.cpp  recommender.cpp  recommender_clubs.cpp  recommender_graph.cpp  recommender_similarity.cpp  serializer.cpp  test.cpp  tfidf_index.cpp  tokenizer.cpp  ui.cpp  user_loader.cpp  user_profile.cpp  utils.cpp  vocab_builder.cpp
