cmake_minimum_required(VERSION 3.10)
project(kurs LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
include_directories(include)
include_directories(third_party/lemmagen/include)
file(GLOB SRC_FILES "src/*.cpp" "third_party/lemmagen/src/*.cpp")
add_executable(kurs ${SRC_FILES})
if (MSVC)
  target_compile_options(kurs PRIVATE /EHsc)
endif()
